# hackathon

./: Dockerfile  README.md  db.json  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: items.py  pets.py  tasks.py  users.py
