[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "pymongo>=4.11.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
